<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:background="@drawable/login"
        android:paddingBottom="40dip"
        android:paddingTop="25.0dip" >

        <EditText
            android:id="@+id/login_edit_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5.0px"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="5.0dip"
            android:maxLength="13"
            android:paddingLeft="60dip"
            android:saveEnabled="true"
            android:singleLine="true"
            android:textColor="#ff3f3f3f"
            android:textSize="25sp" 
            android:hint=""/>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_edit_account"
            android:layout_alignLeft="@+id/login_edit_account"
            android:layout_alignTop="@+id/login_edit_account"
            android:layout_marginRight="15.0sp"
            android:gravity="center_vertical"
            android:paddingLeft="7.0sp"
            android:text="@string/account"
            android:textColor="#ff3f3f3f"
            android:textSize="20.0dip" />

        <EditText
            android:id="@+id/login_edit_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_edit_account"
            android:layout_alignRight="@+id/login_edit_account"
            android:layout_below="@+id/login_edit_account"
            android:layout_marginRight="1.0dip"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="60dip"
            android:saveEnabled="true"
            android:singleLine="true"
            android:textSize="25sp"
            android:hint="" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_edit_pwd"
            android:layout_alignRight="@+id/TextView01"
            android:layout_alignTop="@+id/login_edit_pwd"
            android:gravity="center_vertical"
            android:paddingLeft="7.0sp"
            android:text="@string/password"
            android:textColor="#ff3f3f3f"
            android:textSize="20.0dip" />

        <CheckBox
            android:id="@+id/login_cb_savepwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/login_btn_login"
            android:checked="true"
            android:paddingLeft="49dip"
            android:text="@string/remember"
            android:textColor="#ff222222"
            android:textSize="16.0sp" />

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView02"
            android:layout_marginRight="12.0dip"
            android:layout_marginTop="7.0px"
            android:layout_toLeftOf="@+id/login_btn_reset"
            android:text="@string/login"
            android:textSize="20sp" />

        <Button
            android:id="@+id/login_btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/TextView02"
            android:layout_marginRight="12.0dip"
            android:layout_marginTop="7.0px"
            android:text="@string/reset"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>